module(
    name = "mini_kvs",
    version = "1.0",
)

bazel_dep(name = "bazel_skylib", version = "1.6.1")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "xxhash",
    urls = ["https://github.com/Cyan4973/xxHash/archive/refs/heads/dev.zip"],
    strip_prefix = "xxHash-dev",
    build_file = "//external:xxhash.BUILD",
)
